--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- thẻ main ngữ nghĩa chứa toàn bộ bố cục trang -->
-    <main style="height: 2000px;">
+    <main style="height: 10000px;">
         <!-- Header -->
         <header class="header">
             <div class="content">
@@ -52,11 +52,11 @@
                     </div>
                 </div>
                 <!-- Hero img -->
-                 <img src="./assset/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
+                <img src="./assset/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
             </div>
         </header>
         <!-- Client -->
-         <div class="client">
+        <div class="client">
             <div class="content">
                 <!-- Row1 -->
                 <div class="row">
@@ -77,15 +77,71 @@
                     <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <!-- Brand -->
-                 <div class="images">
+                <div class="images">
                     <img src="./assset/img/client-1.svg" alt="MeUndies">
                     <img src="./assset/img/client-2.svg" alt="MeUndies">
                     <img src="./assset/img/client-3.svg" alt="MeUndies">
                     <img src="./assset/img/client-4.svg" alt="MeUndies">
                     <img src="./assset/img/client-5.svg" alt="MeUndies">
-                 </div>
+                </div>
             </div>
-         </div>
+        </div>
+        <!-- Guides -->
+        <div class="content">
+            <div class="guides">
+                <h2 class="sub-title">How its works?</h2>
+                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
+                    place.</p>
+            </div>
+            <!-- list Guides -->
+            <ul class="list-guide">
+
+                <li class="guide-item">
+                    <img src="./assset/img/buyer.svg" alt="" class="icon">
+                    <h3 class="title">Buyer Guides</h3>
+                    <a href="#!" class="link">
+                        <span>How to buy</span>
+                        <img class="arrow" src="./assset/img/arrow.svg" alt="">
+                    </a>
+                </li>
+
+                <li class="guide-item">
+                    <img src="./assset/img/rent.svg" alt="" class="icon">
+                    <h3 class="title">Renter Guides</h3>
+                    <a href="#!" class="link">
+                        <span>How to rent</span>
+                        <img src="./assset/img/arrow.svg" alt="">
+                    </a>
+                </li>
+
+                <li class="guide-item">
+                    <img src="./assset/img/seller.svg" alt="" class="icon">
+                    <h3 class="title">Seller Guides</h3>
+                    <a href="#!" class="link">
+                        <span>How to sell</span>
+                        <img src="./assset/img/arrow.svg" alt="">
+                    </a>
+                </li>
+            </ul>
+            <div class="guide-cta">
+                <a href="#!" class="btn">Sell Full Guidelines</a>
+            </div>
+            <!-- Featured -->
+             <div class="featured">
+                <div class="content">
+                    <header>
+                        <h2 class="sub-title">Featured Properties</h2>
+                        <div class="row">
+                            <p class="desc">Everything you need to know when you're looking</p>
+                            <a href="#!" class="link">
+                                <span>View All Properties</span>
+                                <img src="./assset/img/arrow.svg" alt="" class="arrow">
+                            </a>
+                        </div>
+                    </header>
+                </div>
+             </div>
+        </div>
     </main>
 </body>
 
