--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
                 <a href="#!" class="btn">Sell Full Guidelines</a>
             </div>
             <!-- Featured -->
-             <div class="featured">
+            <div class="featured">
                 <div class="content">
+                    <!-- Header featured -->
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
                         <div class="row">
@@ -139,8 +140,65 @@
                             </a>
                         </div>
                     </header>
+                    <!-- Featured item  -->
+                    <div class="list">
+                        <!-- Featured item 1-->
+                        <div class="item">
+                            <img src="./assset/img/featured-1.jpg" alt="" class="thumb">
+                            <div class="body">
+                                <h3 class="title">Nikko Apartments</h3>
+                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                                <div class="info">
+                                    <img src="./assset/img/beds.svg" alt="" class="icon">
+                                    <span class="label">5 Beds</span>
+
+                                    <img src="./assset/img/both.svg" alt="" class="icon">
+                                    <span class="label">2 both</span>
+
+                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Featured item 2-->
+                        <div class="item">
+                            <img src="./assset/img/featured-2.jpg" alt="" class="thumb">
+                            <div class="body">
+                                <h3 class="title">CouCou Homestead</h3>
+                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                                <div class="info">
+                                    <img src="./assset/img/beds.svg" alt="" class="icon">
+                                    <span class="label">5 Beds</span>
+
+                                    <img src="./assset/img/both.svg" alt="" class="icon">
+                                    <span class="label">2 both</span>
+
+                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Featured item 3-->
+                        <div class="item">
+                            <img src="./assset/img/featured-3.jpg" alt="" class="thumb">
+                            <div class="body">
+                                <h3 class="title">Lavis 18 Residence</h3>
+                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                                <div class="info">
+                                    <img src="./assset/img/beds.svg" alt="" class="icon">
+                                    <span class="label">5 Beds</span>
+
+                                    <img src="./assset/img/both.svg" alt="" class="icon">
+                                    <span class="label">2 both</span>
+
+                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-             </div>
+            </div>
         </div>
     </main>
 </body>
