--- a/index.html
+++ b/index.html
@@ -87,118 +87,128 @@
             </div>
         </div>
         <!-- Guides -->
-        <div class="content">
-            <div class="guides">
+        <div class="guides">
+            <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
                     place.</p>
+                <!-- list Guides -->
+                <ul class="list-guide">
+
+                    <li class="guide-item">
+                        <img src="./assset/img/buyer.svg" alt="" class="icon">
+                        <h3 class="title">Buyer Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to buy</span>
+                            <img class="arrow" src="./assset/img/arrow.svg" alt="">
+                        </a>
+                    </li>
+
+                    <li class="guide-item">
+                        <img src="./assset/img/rent.svg" alt="" class="icon">
+                        <h3 class="title">Renter Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to rent</span>
+                            <img src="./assset/img/arrow.svg" alt="">
+                        </a>
+                    </li>
+
+                    <li class="guide-item">
+                        <img src="./assset/img/seller.svg" alt="" class="icon">
+                        <h3 class="title">Seller Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to sell</span>
+                            <img src="./assset/img/arrow.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+                <div class="guide-cta">
+                    <a href="#!" class="btn">Sell Full Guidelines</a>
+                </div>
             </div>
-            <!-- list Guides -->
-            <ul class="list-guide">
+        </div>
+        <!-- Featured -->
+        <div class="featured">
+            <div class="content">
+                <!-- Header featured -->
+                <header>
+                    <h2 class="sub-title">Featured Properties</h2>
+                    <div class="row">
+                        <p class="desc">Everything you need to know when you're looking</p>
+                        <a href="#!" class="link">
+                            <span>View All Properties</span>
+                            <img src="./assset/img/arrow.svg" alt="" class="arrow">
+                        </a>
+                    </div>
+                </header>
+                <!-- Featured item  -->
+                <div class="list">
+                    <!-- Featured item 1-->
+                    <div class="item">
+                        <img src="./assset/img/featured-1.jpg" alt="" class="thumb">
+                        <div class="body">
+                            <h3 class="title">
+                                <a href="#!" class="line-clamp">Nikko Apartments</a>
+                            </h3>
+                            <p class="desc line-clamp" style="--line-clamp:3;">8502 Preston Rd. Inglewood, Maine
+                                98280</p>
+                            <div class="info">
+                                <img src="./assset/img/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
 
-                <li class="guide-item">
-                    <img src="./assset/img/buyer.svg" alt="" class="icon">
-                    <h3 class="title">Buyer Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to buy</span>
-                        <img class="arrow" src="./assset/img/arrow.svg" alt="">
-                    </a>
-                </li>
+                                <img src="./assset/img/both.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
 
-                <li class="guide-item">
-                    <img src="./assset/img/rent.svg" alt="" class="icon">
-                    <h3 class="title">Renter Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to rent</span>
-                        <img src="./assset/img/arrow.svg" alt="">
-                    </a>
-                </li>
-
-                <li class="guide-item">
-                    <img src="./assset/img/seller.svg" alt="" class="icon">
-                    <h3 class="title">Seller Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to sell</span>
-                        <img src="./assset/img/arrow.svg" alt="">
-                    </a>
-                </li>
-            </ul>
-            <div class="guide-cta">
-                <a href="#!" class="btn">Sell Full Guidelines</a>
-            </div>
-            <!-- Featured -->
-            <div class="featured">
-                <div class="content">
-                    <!-- Header featured -->
-                    <header>
-                        <h2 class="sub-title">Featured Properties</h2>
-                        <div class="row">
-                            <p class="desc">Everything you need to know when you're looking</p>
-                            <a href="#!" class="link">
-                                <span>View All Properties</span>
-                                <img src="./assset/img/arrow.svg" alt="" class="arrow">
-                            </a>
-                        </div>
-                    </header>
-                    <!-- Featured item  -->
-                    <div class="list">
-                        <!-- Featured item 1-->
-                        <div class="item">
-                            <img src="./assset/img/featured-1.jpg" alt="" class="thumb">
-                            <div class="body">
-                                <h3 class="title">Nikko Apartments</h3>
-                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
-                                <div class="info">
-                                    <img src="./assset/img/beds.svg" alt="" class="icon">
-                                    <span class="label">5 Beds</span>
-
-                                    <img src="./assset/img/both.svg" alt="" class="icon">
-                                    <span class="label">2 both</span>
-
-                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
-                                    <span class="label">2000 Sqft</span>
-                                </div>
+                                <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
                             </div>
                         </div>
-                        <!-- Featured item 2-->
-                        <div class="item">
-                            <img src="./assset/img/featured-2.jpg" alt="" class="thumb">
-                            <div class="body">
-                                <h3 class="title">CouCou Homestead</h3>
-                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
-                                <div class="info">
-                                    <img src="./assset/img/beds.svg" alt="" class="icon">
-                                    <span class="label">5 Beds</span>
+                    </div>
+                    <!-- Featured item 2-->
+                    <div class="item">
+                        <img src="./assset/img/featured-2.jpg" alt="" class="thumb">
+                        <div class="body">
+                            <h3 class="title">
+                                <a href="#!" class="line-clamp">CouCou Homestead</a>
+                            </h3>
+                            <p class="desc line-clamp" style="--line-clamp:3;">8502 Preston Rd. Inglewood, Maine
+                                98280</p>
+                            <div class="info">
+                                <img src="./assset/img/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
 
-                                    <img src="./assset/img/both.svg" alt="" class="icon">
-                                    <span class="label">2 both</span>
+                                <img src="./assset/img/both.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
 
-                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
-                                    <span class="label">2000 Sqft</span>
-                                </div>
+                                <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
                             </div>
                         </div>
-                        <!-- Featured item 3-->
-                        <div class="item">
-                            <img src="./assset/img/featured-3.jpg" alt="" class="thumb">
-                            <div class="body">
-                                <h3 class="title">Lavis 18 Residence</h3>
-                                <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
-                                <div class="info">
-                                    <img src="./assset/img/beds.svg" alt="" class="icon">
-                                    <span class="label">5 Beds</span>
+                    </div>
+                    <!-- Featured item 3-->
+                    <div class="item">
+                        <img src="./assset/img/featured-3.jpg" alt="" class="thumb">
+                        <div class="body">
+                            <h3 class="title">
+                                <a href="#!" class="line-clamp">Lavis 18 Residence</a>
+                            </h3>
+                            <p class="desc line-clamp" style="--line-clamp:3;">8502 Preston Rd. Inglewood, Maine
+                                98280</p>
+                            <div class="info">
+                                <img src="./assset/img/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
 
-                                    <img src="./assset/img/both.svg" alt="" class="icon">
-                                    <span class="label">2 both</span>
+                                <img src="./assset/img/both.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
 
-                                    <img src="./assset/img/sqft.svg" alt="" class="icon">
-                                    <span class="label">2000 Sqft</span>
-                                </div>
+                                <img src="./assset/img/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
 </body>
