--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F8 project 01</title>
+    <!-- RESET CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <!-- GG FONT -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <!-- thẻ main ngữ nghĩa chứa toàn bộ bố cục trang -->
-    <main style="height: 10000px;">
+    <main>
 
         <!-- Header -->
         <header class="header">
@@ -295,13 +296,92 @@
                 <div class="body">
                     <div class="info">
                         <h2 class="sub-title line-clamp"> Subscribe to our Newsletter!</h2>
-                        <p class="desc line-clamp" style="--line-claim:3">Subscribe to our newsletter and stay updated.</p>
+                        <p class="desc line-clamp" style="--line-claim:3">Subscribe to our newsletter and stay updated.
+                        </p>
                         <p class="btn">Subscribe</p>
                     </div>
                     <img src="./assets/img/newletter.svg" alt="" class="image">
                 </div>
             </div>
         </div>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <!-- column -->
+                    <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Get in touch</h3>
+                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                        <div class="social">
+                            <a href="" class="social-link">
+                                <img src="./assets/img/facebook.svg" alt="">
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/twitter.svg" alt="">
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/linkedin.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-bottom">
+                    <img src="./assets/img/logo.svg" alt="besnik." class="logo">
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
