--- a/index.html
+++ b/index.html
@@ -313,16 +313,16 @@
                         <h3 class="heading">Product</h3>
                         <ul class="list">
                             <li class="item">
-                                <a href="">Listing</a>
+                                <a href="#!">Listing</a>
                             </li>
                             <li class="item">
-                                <a href="">Property</a>
+                                <a href="#!">Property</a>
                             </li>
                             <li class="item">
-                                <a href="">Agents</a>
+                                <a href="#!">Agents</a>
                             </li>
                             <li class="item">
-                                <a href="">Blog</a>
+                                <a href="#!">Blog</a>
                             </li>
                         </ul>
                     </div>
@@ -330,16 +330,16 @@
                         <h3 class="heading">Resources</h3>
                         <ul class="list">
                             <li class="item">
-                                <a href="">Our Homes</a>
+                                <a href="#!">Our Homes</a>
                             </li>
                             <li class="item">
-                                <a href="">Member Stories</a>
+                                <a href="#!">Member Stories</a>
                             </li>
                             <li class="item">
-                                <a href="">Video</a>
+                                <a href="#!">Video</a>
                             </li>
                             <li class="item">
-                                <a href="">Free trial</a>
+                                <a href="#!">Free trial</a>
                             </li>
                         </ul>
                     </div>
@@ -347,16 +347,16 @@
                         <h3 class="heading">Company</h3>
                         <ul class="list">
                             <li class="item">
-                                <a href="">Patnerships</a>
+                                <a href="#!">Patnerships</a>
                             </li>
                             <li class="item">
-                                <a href="">Terms of use</a>
+                                <a href="#!">Terms of use</a>
                             </li>
                             <li class="item">
-                                <a href="">Privacy</a>
+                                <a href="#!">Privacy</a>
                             </li>
                             <li class="item">
-                                <a href="">Sitemap</a>
+                                <a href="#!">Sitemap</a>
                             </li>
                         </ul>
                     </div>
@@ -364,13 +364,13 @@
                         <h3 class="heading">Get in touch</h3>
                         <p class="desc">You’ll find your next home, in any style you prefer.</p>
                         <div class="social">
-                            <a href="" class="social-link">
+                            <a href="#!" class="social-link">
                                 <img src="./assets/img/facebook.svg" alt="">
                             </a>
-                            <a href="" class="social-link">
+                            <a href="#!" class="social-link">
                                 <img src="./assets/img/twitter.svg" alt="">
                             </a>
-                            <a href="" class="social-link">
+                            <a href="#!" class="social-link">
                                 <img src="./assets/img/linkedin.svg" alt="">
                             </a>
                         </div>
