--- a/index.html
+++ b/index.html
@@ -81,11 +81,21 @@
                 </div>
                 <!-- Brand -->
                 <div class="images">
-                    <img src="./assets/img/client-1.svg" alt="MeUndies">
-                    <img src="./assets/img/client-2.svg" alt="MeUndies">
-                    <img src="./assets/img/client-3.svg" alt="MeUndies">
-                    <img src="./assets/img/client-4.svg" alt="MeUndies">
-                    <img src="./assets/img/client-5.svg" alt="MeUndies">
+                    <a href="#!">
+                        <img src="./assets/img/client-1.svg" alt="MeUndies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-2.svg" alt="MeUndies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-3.svg" alt="MeUndies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-4.svg" alt="MeUndies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-5.svg" alt="MeUndies">
+                    </a>
                 </div>
             </div>
         </div>
