--- a/index.html
+++ b/index.html
@@ -19,28 +19,33 @@
 <body>
     <!-- thẻ main ngữ nghĩa chứa toàn bộ bố cục trang -->
     <main>
-
+        <header class="fixed-header">
+            <div class="nav">
+                <div class="content">
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <!-- Logo -->
+                        <img src="./assets/img/logo.svg" alt="Besnik.">
+                        <!-- Navigation -->
+                        <ul>
+                            <li><a href="#!">Home</a></li>
+                            <li><a href="#!">Features</a></li>
+                            <li><a href="#!">Services</a></li>
+                            <li><a href="#!">Resources</a></li>
+                            <li><a href="#!">Contact</a></li>
+                        </ul>
+                        <!-- Action -->
+                        <div class="actions">
+                            <a href="#!" class="action-link">Sign in</a>
+                            <a href="#!" class="btn action-btn">Sign up</a>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
         <!-- Header -->
         <header class="header">
             <div class="content">
-                <!-- Navbar -->
-                <nav class="navbar">
-                    <!-- Logo -->
-                    <img src="./assets/img/logo.svg" alt="Besnik.">
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
-                    </ul>
-                    <!-- Action -->
-                    <div class="actions">
-                        <a href="#!" class="action-link">Sign in</a>
-                        <a href="#!" class="btn action-btn">Sign up</a>
-                    </div>
-                </nav>
                 <!-- Hero -->
                 <div class="hero">
                     <div class="info">
