--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                 </div>
             </div>
         </header>
-        <!-- Header -->
-        <header class="header">
-            <div class="content">
                 <!-- Hero -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -61,7 +60,7 @@
                 <!-- Hero img -->
                 <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
             </div>
-        </header>
+        </div>
 
         <!-- Client -->
         <div class="client">
