--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-87MG8964LJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-87MG8964LJ');
+    </script>
 </head>
 
 <body>
@@ -43,9 +53,13 @@
                 <!-- Navbar -->
                 <nav class="navbar">
                     <!-- tablet mobile menu  -->
-                     <label for="menu-checkbox" class="toggle-menu">
-                        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
-                     </label>
+                    <label for="menu-checkbox" class="toggle-menu">
+                        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                            <path
+                                d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                        </svg>
+                    </label>
                     <!-- Logo -->
                     <a class="logo" href="#"> <img src="./assets/img/logo.svg" alt="Besnik."></a>
                     <!-- Navigation -->
@@ -62,7 +76,7 @@
                     <div class="actions">
                         <a href="#!" class="action-link">Sign in</a>
                         <a href="#!" class="btn action-btn">Sign up</a>
-                   
+
                     </div>
                 </nav>
             </div>
@@ -76,7 +90,7 @@
         <label for="menu-checkbox" class="menu-overlay"></label>
         <!-- menu content  -->
         <div class="menu-drawer">
-            <a href="#"> 
+            <a href="#">
                 <img src="./assets/img/logo.svg" alt="Besnik.">
             </a>
             <ul id="mobile-nav"></ul>
@@ -90,7 +104,7 @@
     </header>
 
     <!-- thẻ main ngữ nghĩa chứa toàn bộ bố cục trang -->
-    <main >
+    <main>
         <!-- Hero -->
         <div class="hero-wrap">
             <div class="content">
@@ -372,7 +386,7 @@
     </main>
 
     <!-- Footer -->
-    <footer  id="contact" class="footer" >
+    <footer id="contact" class="footer">
         <div class="content">
             <div class="row row-top">
                 <!-- column -->
