--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
         gtag('config', 'G-87MG8964LJ');
     </script>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="tiêu đề " />
+    <meta property="og:description" content="mô tả " />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 </head>
 
 <body>
