--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </script>
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://lequangsang125.github.io/F8-DuAn1/" />
     <meta property="og:title" content="tiêu đề " />
     <meta property="og:description" content="mô tả " />
     <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
